tests/baselines/reference/restElementWithAssignmentPattern1.errors.txt
tests/cases/conformance/es6/destructuring/restElementWithAssignmentPattern1.ts(2,1): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/es6/destructuring/restElementWithAssignmentPattern1.ts(2,5): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/destructuring/restElementWithAssignmentPattern1.ts (2 errors) ====
    var a: string, b: number;
    [...[a, b = 0]] = ["", 1];
    ~~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        ~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.